@@ -35,6 +35,8 @@ New Features
 Bugs Fixed
 ----------
 
+- Fixed bug in blob filesystem helper: the `isSecure` check was inversed.
+
 - Fixed bug in transaction buffer: a tuple was unpacked incorrectly in
   `clear`.
 
